kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${appName}
  name: ${appName}
  namespace: ${namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${appName}
  strategy: {}
  template:
    metadata:
      labels:
        app: ${appName}
    spec:
      containers:
      - image: omerurhan/todods:${commitId}
        name: ${appName}
        resources: {}
status: {}
