kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: todos-svc
  name: todos-svc
  namespace: dev
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: todos
  type: ClusterIP
status:
  loadBalancer: {}
