kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: todos
  name: ${appName}-ingress
  namespace: ${namespace}
spec:
  rules:
  - host: ${applicationDNS}
    http:
      paths:
      - backend:
          service:
            name: ${appName}-svc
            port:
              number: 8080
        pathType: ImplementationSpecific
